# MovieTranslator

./: .gitignore  LICENSE  README.md  start.bat  start.sh
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: cache.py  config.py  joblog.py  media.py
backend/app/models/: schemas.py
backend/app/services/: asr.py  audio.py  batch.py  frame.py  model_download.py  pipeline.py  refine.py  segmenter.py  subtitle.py  translator.py  vision.py
backend/tests/: test_ass.py  test_audio_tracks.py  test_batch.py  test_frame_only.py  test_frame_translation.py  test_joblog.py  test_network.py  test_prompts.py  test_refine.py  test_segmenter.py  test_subtitle.py  test_translator.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  theme.css  theme.js
frontend/src/views/: HomeView.vue  PromptView.vue  SettingsView.vue
