[project]
name = "movietranslator-backend"
version = "0.1.0"
description = "MovieTranslator backend: extract audio, transcribe with faster-whisper, translate subtitles with a global-context LLM protocol, and emit SRT."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "av>=12.0",
    "faster-whisper>=1.0",
    "openai>=1.30",
    "platformdirs>=4.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
# CUDA runtime libraries for GPU inference (NVIDIA GPU required)
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12>=9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["app*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
